ide/Makefiles: Updated tarball makefiles to use FORCE_32BIT; Disabled forcing -m32 on ARM architecture

--- a/compiler/libec/Makefile
+++ b/compiler/libec/Makefile
@@ -158,15 +158,15 @@ EAR := $(call psep,../../obj/$(PLATFORM)/bin/ear)
 # FLAGS
 
 # BSL CFLAGS
-BSL_CFLAGS = -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w
+BSL_CFLAGS = -fmessage-length=0 -O2 -ffast-math $(FORCE_32_BIT) $(FPIC) -w
 
-CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w -I../bootstrap/include
+CFLAGS += -fmessage-length=0 -O2 -ffast-math $(FORCE_32_BIT) $(FPIC) -w -I../bootstrap/include
 
 CECFLAGS =
 
 ECFLAGS = -nolinenumbers
 
-OFLAGS += -m32 \
+OFLAGS += $(FORCE_32_BIT) \
 	 -L../../obj/$(PLATFORM)/bin \
 	 -L../../obj/$(PLATFORM)/lib
 
