--- a/deps/zlib/Makefile
+++ b/deps/zlib/Makefile
@@ -61,7 +61,7 @@ include ../../include.mk
 
 # FLAGS
 
-CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w
+CFLAGS += -fmessage-length=0 -O2 -ffast-math $(FORCE_32_BIT) $(FPIC) -w
 
 LIBS = $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
