--- a/ecere/Makefile
+++ b/ecere/Makefile
@@ -846,7 +846,7 @@ EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
 
 # FLAGS
 
-CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
+CFLAGS += -fmessage-length=0 -O2 -ffast-math $(FORCE_32_BIT) $(FPIC) -w \
 	 -DBUILDING_ECERE_COM \
 	 -Isrc/gfx/drivers/harfbuzz
 
@@ -854,7 +854,7 @@ CECFLAGS =
 
 ECFLAGS = -nolinenumbers -defaultns ecere
 
-OFLAGS += -m32
+OFLAGS += $(FORCE_32_BIT)
 
 LIBS = -ljpeg -lpng -lz -lfreetype $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
