--- a/compiler/bootstrap/ecs/Makefile
+++ b/compiler/bootstrap/ecs/Makefile
@@ -35,14 +35,14 @@ include ../../../include.mk
 
 # FLAGS
 
-CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
+CFLAGS += -fmessage-length=0 -O2 -ffast-math $(FORCE_32_BIT) $(FPIC) -w \
 	 -DECERE_STATIC
 
 CECFLAGS =
 
 ECFLAGS = -nolinenumbers
 
-OFLAGS += -m32 \
+OFLAGS += $(FORCE_32_BIT) \
 	 -L../ecere/obj/bootstrap.$(PLATFORM) \
 	 -L../libec/obj/bootstrap.$(PLATFORM)
 
