--- a/ecere/Makefile.ecereCOM
+++ b/ecere/Makefile.ecereCOM
@@ -133,14 +133,14 @@ EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
 
 # FLAGS
 
-CFLAGS += -fmessage-length=0 -O2 -ffast-math -m32 $(FPIC) -w \
+CFLAGS += -fmessage-length=0 -O2 -ffast-math $(FORCE_32_BIT) $(FPIC) -w \
 	 -DECERE_COM_MODULE -DBUILDING_ECERE_COM -DECERE_NOFILE
 
 CECFLAGS =
 
 ECFLAGS = -nolinenumbers -defaultns ecere
 
-OFLAGS += -m32
+OFLAGS += $(FORCE_32_BIT)
 
 LIBS = $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
